_deploy/setup/pratiba-nodeport-staging.yml
apiVersion: v1
kind: Service
metadata:
  name: pratiba-nodeport-staging
  namespace: staging
  labels:
    app: pratiba
    env: staging
spec:
  selector:
    app: pratiba
    env: staging
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
