_deploy/setup/pratiba-ingress-staging.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pratiba-staging
  namespace: staging
  annotations:
    kubernetes.io/ingress.global-static-ip-name: pratiba-staging
spec:
  rules:
    - host: staging-2345.prati.ba
      http:
        paths:
        - backend:
            serviceName: pratiba-nodeport-staging
            servicePort: 80
